# 02476_mlops

./: .gitignore  cloudbuild.yaml  policy.yaml  pyproject.toml
s1_development_environment/exercise_files/: 1_Tensors_in_PyTorch.ipynb  2_Neural_Networks_in_PyTorch.ipynb  3_Training_Neural_Networks.ipynb  4_Fashion_MNIST.ipynb  5_Inference_and_Validation.ipynb  6_Saving_and_Loading_Models.ipynb
s1_development_environment/exercise_files/final_exercise/: data.py  (+3 more)
s2_organisation_and_version_control/02476_mlops/: .gitignore  README.md  data.dvc  pyproject.toml  tasks.py
s2_organisation_and_version_control/02476_mlops/.devcontainer/: devcontainer.json
s2_organisation_and_version_control/02476_mlops/.dvc/: config
s2_organisation_and_version_control/02476_mlops/dockerfiles/: api.dockerfile  train.dockerfile
s2_organisation_and_version_control/02476_mlops/docs/: mkdocs.yaml
s2_organisation_and_version_control/02476_mlops/docs/source/: index.md
s2_organisation_and_version_control/02476_mlops/src/s2_project/: data.py  evaluate.py  model.py  train.py  visualize.py
s2_organisation_and_version_control/02476_mlops/tests/: test_data.py
s2_organisation_and_version_control/exercise_files/: greetings.py  iris_classifier.py  typing_exercise.py
s3_reproducibility/exercise_files/: vae_mnist.py
s4_debugging_and_logging/exercise_files/: my_logger.py  pytorch_profiling_test.py  vae_mnist_working.prof  vae_mnist_working.py  vae_mnist_working_optimized.prof
s6_the_cloud/exercise_files/: cloudbuild.yaml
s7_deployment/exercise_files/: caption_api.py  caption_model.py
(+2 files in other folders)
